--- a/package.json
+++ b/package.json
@@ -10,6 +10,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "helmet": "^8.1.0",
     "prisma": "^6.9.0"
+  },
+  "devDependencies": {
+    "@types/cookie-parser": "^1.4.9",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "express": "^5.1.0"
   }
 }
